# TensorRT-DETR3D

./: README.md  detr_pth2onnx.py
detr/: CMakeLists.txt  detr.cc  detr.hh  detr_test.cc
